--- a/docs/report.tex
+++ b/docs/report.tex
@@ -121,7 +121,7 @@ Number of pages & 100,000 \\ \hline
 Number of unique domains & 1,319 \\ \hline
 Average number of pages per domain & 75.8862 pages\\ \hline
 Average download rate & 6.64 pages/sec\\ \hline
-Average page syze & 243521.24 bytes \\ \hline
+Average page size & 243521.24 bytes \\ \hline
 Average tokens per page & 3082.45 tokens \\ \hline
 Average out-links per page: &  360.31 links \\ \hline
 \end{tabular}
