--- a/docs/report.tex
+++ b/docs/report.tex
@@ -132,9 +132,9 @@ The results indicate that the crawler was able to collect a large and diverse co
 
 \subsection{Distribution of Pages per Domain}
 The following histogram shows the distribution of pages per domain in the corpus:
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
-\includegraphics[width=0.8\linewidth]{acmart-primary/acmart-primary/samples/pages_per_domain.png}
+\includegraphics[width=0.7\linewidth]{acmart-primary/acmart-primary/samples/pages_per_domain.png}
 \caption{Distribution of pages per domain}
 \label{fig:histogram}
 \end{figure}
@@ -144,7 +144,7 @@ The histogram shows that most domains have a small number of pages, while a few 
 The following histogram shows the distribution of tokens per page in the corpus:
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\linewidth]{acmart-primary/acmart-primary/samples/tokens_per_page.png}
+\includegraphics[width=0.7\linewidth]{acmart-primary/acmart-primary/samples/tokens_per_page.png}
 \caption{Distribution of tokens per page}
 \label{fig:histogram_tokens}
 \end{figure}
@@ -154,7 +154,7 @@ The histogram shows that most pages have between 100 and 10,000 tokens, with som
 The following histogram shows the distribution of out-links per page in the corpus:
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\linewidth]{acmart-primary/acmart-primary/samples/out_links_per_page.png}
+\includegraphics[width=0.7\linewidth]{acmart-primary/acmart-primary/samples/out_links_per_page.png}
 \caption{Distribution of out-links per page}
 \label{fig:histogram_links}
 \end{figure}
